Add default index and more api docs
